# Compose

./: README.md  hot-swap.sh  meson.build
data/: meson.build
data/css/: main.css
meson/: post_install.py
po/extra/: POTFILES  extra.pot
src/: Application.vala  Application.vala~  Controller.vala  Exporter.vala  Exporter.vala~  SndFileExporter.vala  SndFileExporter.vala~  meson.build  meson.build~
src/backend/: AudioInterface.vala
src/backend/alsa/: AlsaAudioInterfaceImpl.vala
src/backend/jack/: JackAudioInterfaceImpl.vala  JackAudioInterfaceImpl.vala~
src/backend/pulse/: PulseAudioInterfaceImpl.vala  PulseAudioInterfaceImpl.vala~
src/context/: AudioContext.vala  ContextProperties.vala
src/controller/: Controller.vala  Transport.vala
src/model/: AudioData.vala  Color.vala
src/util/: Utility.vala
src/widget/: DrawableObject.vala  Track.vala  TrackControls.vala  TransportPointer.vala  TransportWidget.vala  WorkingArea.vala  WorkingArea.vala~  WorkingAreaGL.vala
vapi/: alsa.vapi  glew.vapi  jack.vapi  sndfile.vapi
