sources = files(
    'Application.vala',
    'model/AudioData.vala',
    'backend/AudioInterface.vala',
    'backend/alsa/AlsaAudioInterfaceImpl.vala',
    'backend/pulse/PulseAudioInterfaceImpl.vala',
    'backend/jack/JackAudioInterfaceImpl.vala',
    'Exporter.vala',
    'SndFileExporter.vala',
    'widget/WorkingArea.vala',
    'widget/WorkingAreaGL.vala',
    'widget/DrawableObject.vala',
    'widget/TransportPointer.vala',
    'context/ContextProperties.vala',
    'controller/Controller.vala',
    'controller/Transport.vala'
)
